--- a/index.html
+++ b/index.html
@@ -1,221 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Math Balloon Game</title>
+  <meta charset="UTF-8">
+  <title>Math Game</title>
   <style>
     body {
       margin: 0;
-      overflow: hidden;
-      font-family: "Comic Sans MS", cursive, sans-serif;
-      background: url('https://i.ibb.co/0j1dVTr/cartoon-sky.png') no-repeat center center fixed;
-      background-size: cover;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f2f2f2;
     }
-
-    #hud {
-      position: absolute;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      gap: 30px;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 10px 20px;
-      border-radius: 20px;
-      font-size: 20px;
-      font-weight: bold;
-      color: #333;
+    .screen {
+      display: none;
+      padding: 40px;
     }
-
-    #question {
-      position: absolute;
-      top: 70px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 32px;
-      font-weight: bold;
-      color: #222;
-      background: rgba(255,255,255,0.8);
-      padding: 10px 20px;
-      border-radius: 15px;
-    }
-
-    canvas {
+    .active {
       display: block;
     }
-
-    #message {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 40px;
-      font-weight: bold;
-      color: #fff;
-      background: rgba(0,0,0,0.6);
-      padding: 20px 30px;
-      border-radius: 20px;
-      display: none;
+    h1 {
+      font-size: 2em;
+      color: #333;
+    }
+    button {
+      padding: 10px 20px;
+      margin: 15px;
+      border: none;
+      border-radius: 8px;
+      background: #4CAF50;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #45a049;
+    }
+    .win {
+      background: #d4edda;
+      color: #155724;
+    }
+    .lose {
+      background: #f8d7da;
+      color: #721c24;
+    }
+    #status {
+      margin-top: 20px;
+      font-size: 18px;
+      color: #444;
     }
   </style>
 </head>
 <body>
-  <div id="hud">
-    <div id="level">Level: 1</div>
-    <div id="score">Score: 0</div>
-    <div id="time">Time: 30</div>
-  </div>
-  <div id="question">What is 2 + 3 ?</div>
-  <canvas id="gameCanvas"></canvas>
-  <div id="message"></div>
 
-  <audio id="bg-music" loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-funday.mp3" type="audio/mpeg">
-  </audio>
-  <audio id="pop-sound">
-    <source src="https://www.myinstants.com/media/sounds/pop.mp3" type="audio/mpeg">
-  </audio>
+  <!-- شاشة المقدمة -->
+  <div id="intro" class="screen active">
+    <h1>🎮 أهلاً بك في لعبة الرياضيات</h1>
+    <p>اختبر ذكاءك وحل التحديات الرياضية 🚀</p>
+    <button onclick="startGame()">ابدأ اللعب</button>
+  </div>
+
+  <!-- شاشة اللعب -->
+  <div id="game" class="screen">
+    <h1>حل هذه المسألة:</h1>
+    <p id="question"></p>
+    <input type="number" id="answer" placeholder="أدخل الإجابة">
+    <button onclick="checkAnswer()">تحقق</button>
+    <p id="feedback"></p>
+    <p id="status"></p>
+  </div>
+
+  <!-- شاشة الفوز -->
+  <div id="win" class="screen win">
+    <h1>🎉 أحسنت! ربحت!</h1>
+    <p>لقد انتقلت إلى المستوى التالي 👏</p>
+    <button onclick="nextLevel()">المستوى التالي</button>
+  </div>
+
+  <!-- شاشة الخسارة -->
+  <div id="lose" class="screen lose">
+    <h1>😢 خسرت!</h1>
+    <p>لا بأس، حاول مرة أخرى! 💪</p>
+    <button onclick="retryLevel()">إعادة المحاولة</button>
+  </div>
 
   <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-
-    let balloons = [];
-    let score = 0;
+    let correctAnswer;
     let level = 1;
-    let time = 30;
-    let currentAnswer = 0;
-    let gameInterval, timerInterval;
+    let score = 0;
 
-    const bgMusic = document.getElementById("bg-music");
-    const popSound = document.getElementById("pop-sound");
-
-    function startGame() {
-      bgMusic.play();
-      generateQuestion();
-      balloons = [];
-      for (let i = 0; i < 5; i++) {
-        balloons.push(createBalloon());
-      }
-      gameInterval = setInterval(updateGame, 40);
-      timerInterval = setInterval(updateTimer, 1000);
+    function showScreen(id) {
+      document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
     }
 
-    function createBalloon() {
-      const colors = ["red", "blue", "green", "yellow", "purple", "orange"];
-      return {
-        x: Math.random() * (canvas.width - 60) + 30,
-        y: canvas.height + Math.random() * 200,
-        r: 40,
-        color: colors[Math.floor(Math.random() * colors.length)],
-        value: Math.floor(Math.random() * 20),
-        speed: 1 + Math.random() * 1.5
-      };
+    function startGame() {
+      level = 1;
+      score = 0;
+      showScreen("game");
+      generateQuestion();
     }
 
     function generateQuestion() {
-      let a, b, op;
-      if (level <= 3) {
-        a = Math.floor(Math.random() * 5) + 1;
-        b = Math.floor(Math.random() * 5) + 1;
-        op = "+";
-        currentAnswer = a + b;
-      } else if (level <= 6) {
-        a = Math.floor(Math.random() * 10) + 1;
-        b = Math.floor(Math.random() * 10) + 1;
-        op = "-";
-        currentAnswer = a - b;
-      } else if (level <= 10) {
-        a = Math.floor(Math.random() * 10) + 1;
-        b = Math.floor(Math.random() * 5) + 1;
-        op = "÷";
-        currentAnswer = Math.floor(a / b);
-        a = currentAnswer * b;
+      let max = level * 10; // كلما ارتفع المستوى الأرقام تكبر
+      let a = Math.floor(Math.random() * max) + 1;
+      let b = Math.floor(Math.random() * max) + 1;
+      correctAnswer = a + b;
+      document.getElementById("question").innerText = `${a} + ${b} = ?`;
+      document.getElementById("answer").value = "";
+      document.getElementById("feedback").innerText = "";
+      document.getElementById("status").innerText = `🎯 المستوى: ${level} | ⭐ النقاط: ${score}`;
+    }
+
+    function checkAnswer() {
+      let userAnswer = parseInt(document.getElementById("answer").value);
+      if (userAnswer === correctAnswer) {
+        score += 10;
+        showScreen("win");
       } else {
-        const ops = ["+", "-", "÷"];
-        op = ops[Math.floor(Math.random() * ops.length)];
-        a = Math.floor(Math.random() * 10) + 1;
-        b = Math.floor(Math.random() * 10) + 1;
-        if (op === "+") currentAnswer = a + b;
-        if (op === "-") currentAnswer = a - b;
-        if (op === "÷") { b = Math.floor(Math.random() * 5) + 1; currentAnswer = Math.floor(a / b); a = currentAnswer * b; }
-      }
-      document.getElementById("question").textContent = `What is ${a} ${op} ${b} ?`;
-    }
-
-    function updateGame() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      balloons.forEach((balloon, i) => {
-        balloon.y -= balloon.speed;
-        ctx.beginPath();
-        ctx.arc(balloon.x, balloon.y, balloon.r, 0, Math.PI * 2);
-        ctx.fillStyle = balloon.color;
-        ctx.fill();
-        ctx.fillStyle = "white";
-        ctx.font = "20px Comic Sans MS";
-        ctx.textAlign = "center";
-        ctx.fillText(balloon.value, balloon.x, balloon.y + 5);
-
-        if (balloon.y + balloon.r < 0) {
-          balloons[i] = createBalloon();
-        }
-      });
-    }
-
-    canvas.addEventListener("click", (e) => {
-      const rect = canvas.getBoundingClientRect();
-      const mouseX = e.clientX - rect.left;
-      const mouseY = e.clientY - rect.top;
-
-      balloons.forEach((balloon, i) => {
-        const dx = mouseX - balloon.x;
-        const dy = mouseY - balloon.y;
-        if (Math.sqrt(dx * dx + dy * dy) < balloon.r) {
-          if (balloon.value === currentAnswer) {
-            popSound.play();
-            score += 10;
-            level++;
-            resetLevel();
-          } else {
-            score -= 5;
-          }
-          document.getElementById("score").textContent = "Score: " + score;
-        }
-      });
-    });
-
-    function updateTimer() {
-      time--;
-      document.getElementById("time").textContent = "Time: " + time;
-      if (time <= 0) {
-        endGame();
+        showScreen("lose");
       }
     }
 
-    function resetLevel() {
-      clearInterval(gameInterval);
-      clearInterval(timerInterval);
-      time = 30;
-      document.getElementById("level").textContent = "Level: " + level;
-      startGame();
+    function nextLevel() {
+      level++;
+      showScreen("game");
+      generateQuestion();
     }
 
-    function endGame() {
-      clearInterval(gameInterval);
-      clearInterval(timerInterval);
-      bgMusic.pause();
-      document.getElementById("message").style.display = "block";
-      if (level > 10) {
-        document.getElementById("message").textContent = "🎉 You are a Genius! 🎉";
-      } else {
-        document.getElementById("message").textContent = "Game Over! Try Again!";
-      }
+    function retryLevel() {
+      showScreen("game");
+      generateQuestion();
     }
-
-    startGame();
   </script>
+
 </body>
 </html>
