--- a/index.html
+++ b/index.html
@@ -1,52 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Balloon Math Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Math Balloon Game</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: #87ceeb;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: Comic Sans MS, Arial, sans-serif;
-    }
-    canvas {
-      background: url("background.jpg") no-repeat center center;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      text-align: center;
+      background: url('https://i.ibb.co/3sFrd0s/cartoon-background.jpg') no-repeat center center fixed;
       background-size: cover;
+      overflow: hidden;
+    }
+    #gameContainer {
+      position: relative;
       width: 100%;
-      max-width: 480px;
-      height: auto;
-      border: 4px solid #fff;
-      border-radius: 20px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      height: 100vh;
+      overflow: hidden;
+    }
+    .balloon {
+      position: absolute;
+      width: 80px;
+      height: 100px;
+      background: radial-gradient(circle at 30% 30%, #ff6666, #cc0000);
+      border-radius: 50% 50% 45% 55%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 24px;
+      font-weight: bold;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
     }
     #hud {
       position: absolute;
       top: 10px;
       left: 50%;
       transform: translateX(-50%);
+      background: rgba(255,255,255,0.8);
+      padding: 10px 20px;
+      border-radius: 15px;
       display: flex;
       gap: 20px;
-      font-size: 18px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+    #question {
+      position: absolute;
+      top: 70px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 28px;
+      font-weight: bold;
+      background: rgba(255,255,255,0.8);
+      padding: 10px 20px;
+      border-radius: 15px;
+    }
+    #message {
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 40px;
       font-weight: bold;
       color: #fff;
-      text-shadow: 2px 2px 4px #000;
+      text-shadow: 2px 2px 5px #000;
+      display: none;
     }
-    #hud div {
-      padding: 5px 10px;
-      background: rgba(0,0,0,0.4);
-      border-radius: 10px;
+    button {
+      padding: 10px 20px;
+      font-size: 20px;
+      border: none;
+      border-radius: 12px;
+      background: #4CAF50;
+      color: white;
+      cursor: pointer;
+      margin-top: 20px;
     }
+    button:hover { background: #45a049; }
   </style>
 </head>
 <body>
-  <div id="hud">
-    <div id="score">Score: 0</div>
-    <div id="level">Level: 1</div>
-    <div id="time">Time: 30</div>
+  <div id="gameContainer">
+    <div id="hud">
+      <div>❤️ Lives: <span id="lives">3</span></div>
+      <div>⭐ Score: <span id="score">0</span></div>
+      <div>🎮 Level: <span id="level">1</span></div>
+      <div>⏳ Time: <span id="time">30</span>s</div>
+    </div>
+    <div id="question">Press Start to Begin</div>
+    <div id="message"></div>
+    <button id="startBtn">Start Game</button>
   </div>
-  <canvas id="gameCanvas" width="
+
+  <audio id="bgMusic" loop>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+  </audio>
+
+  <script>
+    const startBtn = document.getElementById('startBtn');
+    const question = document.getElementById('question');
+    const message = document.getElementById('message');
+    const scoreDisplay = document.getElementById('score');
+    const livesDisplay = document.getElementById('lives');
+    const levelDisplay = document.getElementById('level');
+    const timeDisplay = document.getElementById('time');
+    const gameContainer = document.getElementById('gameContainer');
+    const bgMusic = document.getElementById('bgMusic');
+
+    let score = 0;
+    let lives = 3;
+    let level = 1;
+    let time = 30;
+    let correctAnswer;
+    let timer;
+
+    function startGame(){
+      score = 0; lives = 3; level = 1; time = 30;
+      scoreDisplay.textContent = score;
+      livesDisplay.textContent = lives;
+      levelDisplay.textContent = level;
+      timeDisplay.textContent = time;
+      startBtn.style.display = 'none';
+      bgMusic.play();
+      startTimer();
+      newQuestion();
+    }
+
+    function startTimer(){
+      timer = setInterval(()=>{
+        time--;
+        timeDisplay.textContent = time;
+        if(time <= 0){
+          loseLife();
+        }
+      },1000);
+    }
+
+    function newQuestion(){
+      clearBalloons();
+      let range = 10 + level*2;
+      let num1 = Math.floor(Math.random()*range)+1;
+      let num2 = Math.floor(Math.random()*range)+1;
+      let operator = chooseOperator();
+
+      switch(operator){
+        case '+': correctAnswer = num1 + num2; break;
+        case '-': correctAnswer = num1 - num2; break;
+        case '÷': num1 = num1 * num2; correctAnswer = num1 / num2; break;
+      }
+
+      question.textContent = `${num1} ${operator} ${num2} = ?`;
+
+      let answers = [correctAnswer];
+      while(answers.length < 4){
+        let fake = correctAnswer + Math.floor(Math.random()*10 - 5);
+        if(!answers.includes(fake) && fake >= 0){
+          answers.push(fake);
+        }
+      }
+      answers.sort(()=>Math.random()-0.5);
+
+      answers.forEach((ans,i)=>{
+        let balloon = document.createElement('div');
+        balloon.className = 'balloon';
+        balloon.style.left = `${20+i*20}%`;
+        balloon.style.top = '80%';
+        balloon.textContent = ans;
+        balloon.onclick = ()=>checkAnswer(ans);
+        gameContainer.appendChild(balloon);
+        animateBalloon(balloon);
+      });
+    }
+
+    function animateBalloon(balloon){
+      let pos = 80;
+      let speed = 0.05 + level*0.02;
+      let interval = setInterval(()=>{
+        if(pos <= 0){
+          clearInterval(interval);
+          balloon.remove();
+        } else {
+          pos -= speed;
+          balloon.style.top = pos+'%';
+        }
+      },50);
+    }
+
+    function chooseOperator(){
+      if(level <= 3) return '+';
+      if(level <= 6) return '-';
+      if(level == 10) return '÷';
+      if(level >= 7 && level <= 9){
+        return Math.random() > 0.5 ? '+' : '-';
+      }
+      if(level > 10){
+        let ops = ['+','-','÷'];
+        return ops[Math.floor(Math.random()*ops.length)];
+      }
+    }
+
+    function checkAnswer(ans){
+      if(ans === correctAnswer){
+        score += 10;
+        scoreDisplay.textContent = score;
+        nextLevel();
+      } else {
+        loseLife();
+      }
+    }
+
+    function loseLife(){
+      lives--;
+      livesDisplay.textContent = lives;
+      if(lives <= 0){
+        endGame("Game Over! Try Again");
+      } else {
+        newQuestion();
+      }
+    }
+
+    function nextLevel(){
+      if(score % 30 === 0){
+        level++;
+        levelDisplay.textContent = level;
+        if(level > 10 && score % 100 === 0){
+          showMessage("🎉 You are a Genius! 🎉");
+        }
+      }
+      newQuestion();
+    }
+
+    function clearBalloons(){
+      document.querySelectorAll('.balloon').forEach(b=>b.remove());
+    }
+
+    function endGame(msg){
+      clearInterval(timer);
+      bgMusic.pause();
+      showMessage(msg);
+      startBtn.style.display = 'block';
+    }
+
+    function showMessage(msg){
+      message.textContent = msg;
+      message.style.display = 'block';
+      setTimeout(()=>{message.style.display='none';},3000);
+    }
+
+    startBtn.addEventListener('click', startGame);
+  </script>
+</body>
+</html>
